[gd_scene load_steps=4 format=3 uid="uid://dc5ry8exkxrsm"]

[ext_resource type="Script" path="res://Floor.gd" id="1_mtghe"]
[ext_resource type="Texture2D" uid="uid://duxa55rik8k5" path="res://green.png" id="2_diflm"]

[sub_resource type="SystemFont" id="SystemFont_1c4x5"]

[node name="Floor" type="Node2D"]
script = ExtResource("1_mtghe")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1150.0
offset_bottom = 640.0
texture = ExtResource("2_diflm")
expand_mode = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_right = 400.0
offset_bottom = 200.0

[node name="Updates" type="RichTextLabel" parent="."]
offset_left = 100.0
offset_top = 300.0
offset_right = 500.0
offset_bottom = 600.0

[node name="FloorMap" type="Label" parent="."]
offset_left = 900.0
offset_top = 100.0
offset_right = 1100.0
offset_bottom = 300.0
theme_override_fonts/font = SubResource("SystemFont_1c4x5")
theme_override_font_sizes/font_size = 18

[node name="Done" type="Button" parent="."]
offset_left = 200.0
offset_top = 550.0
offset_right = 254.0
offset_bottom = 581.0
text = "DONE"

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Done" to="." method="_on_done_pressed"]
